# fastai

./: .gitignore  FastAI_Product_Overview.md  QuickAI_Product_Overview.md  README.md  pyproject.toml
docs/: README.zh-CN.md
docs/design/: commands.md
docs/requirements/commands/: 001_overview.md
docs/requirements/runtime/: 001_overview.md
docs/superpowers/plans/: 2026-05-26-fastai-rename.md
docs/superpowers/specs/: 2026-05-26-fastai-rename-design.md  2026-05-26-quikai-pyproject-metadata-design.md
fastai/: __init__.py  __main__.py  cli.py  fastai.py  recon.py
fastai/agents/: __init__.py  flow.py  local.py  runtimes.py
fastai/agents/flows/: __init__.py  recon.py
fastai/agents/native/: CodingAgent.py
fastai/commands/: __init__.py  base.py  context.py  discovery.py  recon.py  registry.py
fastai/commands/recon/: __init__.py  collectors.py  orchestrator.py  protocol.py  renderer.py
fastai/recon/: __init__.py  collectors.py  glance.py  models.py  orchestrator.py  protocol.py  renderer.py
fastai/tools/: SCM.py
quickai/: __init__.py  __main__.py  cli.py  quickai.py
tests/: __init__.py  test_agent_runtime.py  test_cli_commands.py  test_cli_entrypoint.py  test_command_discovery.py  test_glance.py  test_native_coding_agents.py  test_recon_command.py  test_recon_flow.py  test_recon_pipeline.py  test_scm.py
