[project]
name = "fastai"
version = "0.1.0"
description = "An AI scaffolding tool that upgrades software projects into AI-ready projects and keeps their AI infrastructure up to date."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai", "scaffolding", "developer-tools", "documentation", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "typer>=0.26.1",
]

[project.scripts]
fastai = "fastai.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
